also generate jwt; accept own and auth0 jwt
